implemented auto generate class
- "Auto generate class" now works! If enabled and upon changing the AnimatorController it will regenerate the file as expected.
- Changing the default animator parameters now works (current updates in realtime without saving required, probably shouldn't allow that)
- Using 'UnityEditor.SettingsManagement' for saving data
- Fix for "Create layers" in it's code template not using a variable where it was supposed to
- Small bug fix where selecting a file path via the dialog didn't immediately update the text field

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.spaghetti.animator-gen",
+  "name": "com.palkiaa.animator-gen",
   "version": "1.0.0",
   "displayName": "Animator Gen",
   "description": "Generate's a class to interact with your Animator controllers",
@@ -8,5 +8,8 @@
     "name": "Palkiaa",
     "url": "https://github.com/Palkiaa"
   },
-  "type": "tool"
+  "type": "tool",
+  "dependencies": {
+    "com.unity.settings-manager": "2.0.1"
+  }
 }
